[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/objs/Place.gd" type="Script" id=1]
[ext_resource path="res://map/imgs/place.png" type="Texture" id=2]
[ext_resource path="res://map/imgs/city_selected.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Place" type="Area2D" index="0"]

editor/display_folded = true
z_index = 3
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
content = ""
access = ""

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="sprite_selected" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.187506, 0.124996 )
scale = Vector2( 4.80288, 4.81731 )
shape = SubResource( 1 )

[node name="city_name" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -48.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="." to="." method="_on_Place_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_City_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_City_mouse_exited"]


